# cli_srv_example

./: CMakeLists.txt  LICENSE  README.md  helpers.h
client/: main.cpp
server/: id_gen.h  main.cpp  players.h  rooms.h  server.h
